new: painel de admin

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Soft UI Dashboard",
-  "name": "Soft UI Dashboard React",
+  "short_name": "Cactus-Schedule",
+  "name": "Cactus-Schedule UI",
   "icons": [
     {
       "src": "favicon.png",
